Hotfix change java version